--- a/modules/common/src/customFields/customFieldMeta.component.html
+++ b/modules/common/src/customFields/customFieldMeta.component.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button [title]="t._('IDEA_COMMON.CUSTOM_FIELDS.CLOSE_WITHOUT_SAVING')" (click)="close()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
+      <ion-button [title]="'IDEA_COMMON.CUSTOM_FIELDS.CLOSE_WITHOUT_SAVING' | translate" (click)="close()">
+        <ion-icon slot="icon-only" icon="close"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>{{ 'IDEA_COMMON.CUSTOM_FIELDS.MANAGE_FIELD' | translate }}</ion-title>
     <ion-buttons slot="end" *ngIf="!disabled">
-      <ion-button [title]="t._('IDEA_COMMON.CUSTOM_FIELDS.SAVE_CHANGES')" (click)="save()">
-        <ion-icon slot="icon-only" name="checkmark-circle"></ion-icon>
+      <ion-button [title]="'IDEA_COMMON.CUSTOM_FIELDS.SAVE_CHANGES' | translate" (click)="save()">
+        <ion-icon slot="icon-only" icon="checkmark-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -17,26 +17,23 @@
   <ion-list class="aList ion-padding" [class.viewMode]="disabled" [class.editMode]="!disabled">
     <ion-list-header *ngIf="disabled">
       <ion-label>
-        <h2>{{ getLabelValue(_field.name) }} <ion-text class="obligatoryDot" *ngIf="_field.obligatory"></ion-text></h2>
+        <h2>{{ _field.name | label }} <ion-text class="obligatoryDot" *ngIf="_field.obligatory"></ion-text></h2>
         <ion-badge color="dark">{{ 'IDEA_COMMON.CUSTOM_FIELDS.FIELDS_TYPES.' + _field.type | translate }}</ion-badge>
         <ion-badge
           color="medium"
           *ngIf="
-            _field.default &&
-            (_field.type === CustomFieldTypes.STRING ||
-              _field.type === CustomFieldTypes.NUMBER ||
-              _field.type === CustomFieldTypes.ENUM)
+            _field.default && (_field.type === CFT.STRING || _field.type === CFT.NUMBER || _field.type === CFT.ENUM)
           "
         >
           {{ 'IDEA_COMMON.CUSTOM_FIELDS.DEFAULT' | translate }}: {{ _field.default }}
         </ion-badge>
-        <ion-badge color="medium" *ngIf="_field.type === CustomFieldTypes.NUMBER">
+        <ion-badge color="medium" *ngIf="_field.type === CFT.NUMBER">
           {{ 'IDEA_COMMON.CUSTOM_FIELDS.MIN' | translate }}: {{ _field.min }}
         </ion-badge>
-        <ion-badge color="medium" *ngIf="_field.type === CustomFieldTypes.NUMBER">
+        <ion-badge color="medium" *ngIf="_field.type === CFT.NUMBER">
           {{ 'IDEA_COMMON.CUSTOM_FIELDS.MAX' | translate }}: {{ _field.max }}
         </ion-badge>
-        <p>{{ getLabelValue(_field.description) }}</p>
+        <p>{{ _field.description | label }}</p>
       </ion-label>
       <ion-icon *ngIf="_field.icon" [name]="_field.icon"></ion-icon>
     </ion-list-header>
@@ -48,17 +45,17 @@
         <ion-input
           type="text"
           readonly="true"
-          [value]="getLabelValue(_field.name)"
-          [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.NAME_HINT')"
+          [value]="_field.name | label"
+          [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.NAME_HINT' | translate"
         ></ion-input>
         <ion-button
           slot="end"
           fill="clear"
           class="marginTop"
-          [title]="t._('COMMON.EDIT')"
+          [title]="'COMMON.EDIT' | translate"
           (click)="editLabel(t._('IDEA_COMMON.CUSTOM_FIELDS.NAME'), _field.name)"
         >
-          <ion-icon slot="icon-only" name="pencil"></ion-icon>
+          <ion-icon slot="icon-only" icon="pencil"></ion-icon>
         </ion-button>
       </ion-item>
       <ion-item [lines]="lines" [class.fieldHasError]="hasFieldAnError('description')">
@@ -66,17 +63,17 @@
         <ion-input
           type="text"
           readonly="true"
-          [value]="getLabelValue(_field.description)"
-          [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.DESCRIPTION_HINT')"
+          [value]="_field.description | label"
+          [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.DESCRIPTION_HINT' | translate"
         ></ion-input>
         <ion-button
           slot="end"
           fill="clear"
           class="marginTop"
-          [title]="t._('COMMON.EDIT')"
+          [title]="'COMMON.EDIT' | translate"
           (click)="editLabel(t._('IDEA_COMMON.CUSTOM_FIELDS.DESCRIPTION'), _field.description)"
         >
-          <ion-icon slot="icon-only" name="pencil"></ion-icon>
+          <ion-icon slot="icon-only" icon="pencil"></ion-icon>
         </ion-button>
       </ion-item>
       <ion-item [lines]="lines" [class.fieldHasError]="hasFieldAnError('icon')">
@@ -85,13 +82,13 @@
           type="text"
           readonly="true"
           [value]="_field.icon"
-          [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.ICON_HINT')"
+          [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.ICON_HINT' | translate"
         ></ion-input>
         <ion-badge slot="end" color="dark" class="marginTop" *ngIf="_field.icon">
           <ion-icon [name]="_field.icon"></ion-icon>
         </ion-badge>
-        <ion-button fill="clear" slot="end" class="marginTop" [title]="t._('COMMON.EDIT')" (click)="editIcon()">
-          <ion-icon name="pencil" slot="icon-only"></ion-icon>
+        <ion-button fill="clear" slot="end" class="marginTop" [title]="'COMMON.EDIT' | translate" (click)="editIcon()">
+          <ion-icon icon="pencil" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-item>
       <ion-item [lines]="lines" [class.fieldHasError]="hasFieldAnError('type')">
@@ -103,22 +100,18 @@
         </ion-select>
       </ion-item>
       <ion-item
-        *ngIf="_field.type === CustomFieldTypes.STRING || _field.type === CustomFieldTypes.NUMBER"
+        *ngIf="_field.type === CFT.STRING || _field.type === CFT.NUMBER"
         [lines]="lines"
         [class.fieldHasError]="hasFieldAnError('default')"
       >
         <ion-label position="stacked">{{ 'IDEA_COMMON.CUSTOM_FIELDS.DEFAULT' | translate }}</ion-label>
         <ion-input
           type="text"
-          [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.DEFAULT_HINT')"
+          [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.DEFAULT_HINT' | translate"
           [(ngModel)]="_field.default"
         ></ion-input>
       </ion-item>
-      <ion-item
-        *ngIf="_field.type === CustomFieldTypes.ENUM"
-        [lines]="lines"
-        [class.fieldHasError]="hasFieldAnError('default')"
-      >
+      <ion-item *ngIf="_field.type === CFT.ENUM" [lines]="lines" [class.fieldHasError]="hasFieldAnError('default')">
         <ion-label position="stacked">{{ 'IDEA_COMMON.CUSTOM_FIELDS.DEFAULT_CHOICE' | translate }}</ion-label>
         <ion-select [(ngModel)]="_field.default">
           <ion-select-option value="">{{
@@ -129,27 +122,19 @@
           </ion-select-option>
         </ion-select>
       </ion-item>
-      <ion-item
-        *ngIf="_field.type === CustomFieldTypes.NUMBER"
-        [lines]="lines"
-        [class.fieldHasError]="hasFieldAnError('min')"
-      >
+      <ion-item *ngIf="_field.type === CFT.NUMBER" [lines]="lines" [class.fieldHasError]="hasFieldAnError('min')">
         <ion-label position="stacked">{{ 'IDEA_COMMON.CUSTOM_FIELDS.MIN' | translate }}</ion-label>
         <ion-input
           type="number"
-          [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.MIN_HINT')"
+          [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.MIN_HINT' | translate"
           [(ngModel)]="_field.min"
         ></ion-input>
       </ion-item>
-      <ion-item
-        *ngIf="_field.type === CustomFieldTypes.NUMBER"
-        [lines]="lines"
-        [class.fieldHasError]="hasFieldAnError('max')"
-      >
+      <ion-item *ngIf="_field.type === CFT.NUMBER" [lines]="lines" [class.fieldHasError]="hasFieldAnError('max')">
         <ion-label position="stacked">{{ 'IDEA_COMMON.CUSTOM_FIELDS.MAX' | translate }} </ion-label>
         <ion-input
           type="number"
-          [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.MAX_HINT')"
+          [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.MAX_HINT' | translate"
           [(ngModel)]="_field.max"
         ></ion-input>
       </ion-item>
@@ -161,7 +146,7 @@
       <ion-toggle [(ngModel)]="_field.obligatory"></ion-toggle>
     </ion-item>
   </ion-list>
-  <ion-list class="aList ion-padding" *ngIf="_field.type === CustomFieldTypes.ENUM">
+  <ion-list class="aList ion-padding" *ngIf="_field.type === CFT.ENUM">
     <ion-list-header>
       <ion-label>
         <h3>{{ 'IDEA_COMMON.CUSTOM_FIELDS.OPTIONS' | translate }}</h3>
@@ -180,18 +165,24 @@
       >
         <ion-reorder slot="start" *ngIf="!disabled"></ion-reorder>
         <ion-label>{{ _field.getEnumElement(e, t.getCurrentLang(), t.languages()) }}</ion-label>
-        <ion-button slot="end" fill="clear" *ngIf="!disabled" [title]="t._('COMMON.EDIT')" (click)="editEnumLabel(e)">
-          <ion-icon name="pencil" slot="icon-only"></ion-icon>
+        <ion-button
+          slot="end"
+          fill="clear"
+          *ngIf="!disabled"
+          [title]="'COMMON.EDIT' | translate"
+          (click)="editEnumLabel(e)"
+        >
+          <ion-icon icon="pencil" slot="icon-only"></ion-icon>
         </ion-button>
         <ion-button
           slot="end"
           fill="clear"
           color="danger"
           *ngIf="!disabled"
-          [title]="t._('IDEA_COMMON.CUSTOM_FIELDS.REMOVE_OPTION')"
+          [title]="'IDEA_COMMON.CUSTOM_FIELDS.REMOVE_OPTION' | translate"
           (click)="removeOptionByIndex(index)"
         >
-          <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+          <ion-icon icon="trash-outline" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-item>
     </ion-reorder-group>
@@ -200,7 +191,7 @@
         <ion-button
           size="small"
           color="medium"
-          [title]="t._('IDEA_COMMON.CUSTOM_FIELDS.ADD_OPTION_HINT')"
+          [title]="'IDEA_COMMON.CUSTOM_FIELDS.ADD_OPTION_HINT' | translate"
           (click)="addOption()"
         >
           {{ 'IDEA_COMMON.CUSTOM_FIELDS.ADD_OPTION' | translate }}
