--- a/modules/common/src/customFields/customSectionMeta.component.html
+++ b/modules/common/src/customFields/customSectionMeta.component.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button [title]="t._('IDEA_COMMON.CUSTOM_FIELDS.CLOSE_WITHOUT_SAVING')" (click)="close()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
+      <ion-button [title]="'IDEA_COMMON.CUSTOM_FIELDS.CLOSE_WITHOUT_SAVING' | translate" (click)="close()">
+        <ion-icon slot="icon-only" icon="close"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>{{ 'IDEA_COMMON.CUSTOM_FIELDS.MANAGE_SECTION' | translate }}</ion-title>
     <ion-buttons slot="end" *ngIf="!disabled">
-      <ion-button [title]="t._('IDEA_COMMON.CUSTOM_FIELDS.SAVE_CHANGES')" (click)="save()">
-        <ion-icon slot="icon-only" name="checkmark-circle"></ion-icon>
+      <ion-button [title]="'IDEA_COMMON.CUSTOM_FIELDS.SAVE_CHANGES' | translate" (click)="save()">
+        <ion-icon slot="icon-only" icon="checkmark-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -19,8 +19,8 @@
       <ng-container *ngIf="!hideHeaders">
         <ion-list-header *ngIf="disabled">
           <ion-label>
-            <h2>{{ getLabelValue(_section.name) }}</h2>
-            <p>{{ getLabelValue(_section.description) }}</p>
+            <h2>{{ _section.name | label }}</h2>
+            <p>{{ _section.description | label }}</p>
           </ion-label>
         </ion-list-header>
         <ion-item *ngIf="!disabled" [lines]="lines" [class.fieldHasError]="hasFieldAnError('name')">
@@ -31,11 +31,17 @@
           <ion-input
             type="text"
             readonly="true"
-            [value]="getLabelValue(_section.name)"
-            [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.SECTION_NAME_HINT')"
+            [value]="_section.name | label"
+            [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.SECTION_NAME_HINT' | translate"
           ></ion-input>
-          <ion-button slot="end" fill="clear" class="marginTop" [title]="t._('COMMON.EDIT')" (click)="editName()">
-            <ion-icon slot="icon-only" name="pencil"></ion-icon>
+          <ion-button
+            slot="end"
+            fill="clear"
+            class="marginTop"
+            [title]="'COMMON.EDIT' | translate"
+            (click)="editName()"
+          >
+            <ion-icon slot="icon-only" icon="pencil"></ion-icon>
           </ion-button>
         </ion-item>
         <ion-item *ngIf="!disabled" [lines]="lines" [class.fieldHasError]="hasFieldAnError('description')">
@@ -43,17 +49,17 @@
           <ion-input
             type="text"
             readonly="true"
-            [value]="getLabelValue(_section.description)"
-            [placeholder]="t._('IDEA_COMMON.CUSTOM_FIELDS.SECTION_DESCRIPTION_HINT')"
+            [value]="_section.description | label"
+            [placeholder]="'IDEA_COMMON.CUSTOM_FIELDS.SECTION_DESCRIPTION_HINT' | translate"
           ></ion-input>
           <ion-button
             slot="end"
             fill="clear"
             class="marginTop"
-            [title]="t._('COMMON.EDIT')"
+            [title]="'COMMON.EDIT' | translate"
             (click)="editDescription()"
           >
-            <ion-icon slot="icon-only" name="pencil"></ion-icon>
+            <ion-icon slot="icon-only" icon="pencil"></ion-icon>
           </ion-button>
         </ion-item>
         <ion-list-header>
@@ -71,15 +77,15 @@
         <ion-item *ngFor="let f of _section.fieldsLegend" [button]="true" [lines]="lines" (click)="openField(f)">
           <ion-reorder slot="start" *ngIf="!disabled"></ion-reorder>
           <ion-label>
-            {{ getLabelValue(_section.fields[f].name) }}
+            {{ _section.fields[f].name | label }}
             <ion-text class="obligatoryDot" *ngIf="_section.fields[f].obligatory"></ion-text>
-            <p>{{ getLabelValue(_section.fields[f].description) }}</p>
+            <p>{{ _section.fields[f].description | label }}</p>
           </ion-label>
           <ion-badge slot="end" color="medium">
             {{ 'IDEA_COMMON.CUSTOM_FIELDS.FIELDS_TYPES.' + _section.fields[f].type | translate }}
           </ion-badge>
           <ion-button slot="end" fill="clear" color="danger" *ngIf="!disabled" (click)="removeField(f, $event)">
-            <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+            <ion-icon icon="trash-outline" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-item>
       </ion-reorder-group>
@@ -117,8 +123,8 @@
                   [disabled]="disabled"
                   (click)="removeFieldToDisplayTemplateRow(rowIndex, field)"
                 >
-                  <ion-icon name="close" slot="start" *ngIf="!disabled"></ion-icon>
-                  {{ getLabelValue(_section.fields[field].name) }}
+                  <ion-icon icon="close" slot="start" *ngIf="!disabled"></ion-icon>
+                  {{ _section.fields[field].name | label }}
                 </ion-button>
               </div>
             </ion-label>
@@ -127,10 +133,10 @@
               fill="clear"
               color="primary"
               *ngIf="!disabled && !isDisplayTemplateRowFull(rowIndex)"
-              [title]="t._('IDEA_COMMON.CUSTOM_FIELDS.ADD_FIELD')"
+              [title]="'IDEA_COMMON.CUSTOM_FIELDS.ADD_FIELD' | translate"
               (click)="addFieldToDisplayTemplateRow(rowIndex)"
             >
-              <ion-icon name="add-circle-outline"></ion-icon>
+              <ion-icon icon="add-circle-outline"></ion-icon>
             </ion-button>
           </ion-item>
         </div>
