style(common): improved actionSheet spacing with icons

--- a/modules/common/src/actionSheet/actionSheet.component.scss
+++ b/modules/common/src/actionSheet/actionSheet.component.scss
@@ -25,7 +25,14 @@ ion-grid.actionSheetGrid {
         ion-icon {
           font-size: 1.8em;
         }
+        br {
+          content: '';
+          margin-bottom: 10px;
+        }
       }
     }
   }
+}
+.action-sheet-cancel ion-icon {
+  opacity: 0.8;
 }
