--- a/modules/common/src/checker/checker.component.html
+++ b/modules/common/src/checker/checker.component.html
@@ -1,6 +1,7 @@
 <ion-item
   class="checkerItem"
-  [lines]="lines ?? 'full'"
+  [color]="color"
+  [lines]="lines"
   [title]="searchPlaceholder ?? null"
   [button]="!disabled"
   [class.withLabel]="label"
