--- a/modules/common/src/colors/colorPicker.component.html
+++ b/modules/common/src/colors/colorPicker.component.html
@@ -1,6 +1,7 @@
 <ion-item
   class="colorPickerItem"
-  [lines]="lines || 'full'"
+  [color]="color"
+  [lines]="lines"
   [button]="!disabled"
   [title]="placeholder || ''"
   [class.withLabel]="label"
