--- a/modules/common/src/dateTime/dateTime.component.html
+++ b/modules/common/src/dateTime/dateTime.component.html
@@ -1,6 +1,7 @@
 <ion-item
   class="dateTimeItem"
-  [lines]="lines || 'full'"
+  [color]="color"
+  [lines]="lines"
   [title]="placeholder || label || ''"
   [button]="!disabled"
   [class.withLabel]="label"
