--- a/modules/common/src/labeler/label.component.html
+++ b/modules/common/src/labeler/label.component.html
@@ -1,6 +1,7 @@
 <ion-item
   class="labelItem"
   button
+  [color]="color"
   [lines]="lines"
   [title]="placeholder ?? ''"
   [class.withLabel]="label"
