--- a/modules/common/src/select/select.component.html
+++ b/modules/common/src/select/select.component.html
@@ -1,6 +1,7 @@
 <ion-item
   class="selectItem"
-  [lines]="lines ?? 'full'"
+  [color]="color"
+  [lines]="lines"
   [button]="!disabled"
   [title]="placeholder ?? description ?? ''"
   [class.withLabel]="label"
