--- a/modules/common/src/contacts/contacts.component.html
+++ b/modules/common/src/contacts/contacts.component.html
@@ -1,25 +1,25 @@
 <div class="contacts">
-  <ion-item [lines]="lines" *ngIf="showName">
+  <ion-item *ngIf="showName" [lines]="lines" [color]="color">
     <ion-label position="stacked">
       {{ 'IDEA_COMMON.CONTACTS.NAME' | translate }}
     </ion-label>
     <ion-input
       autocomplete="new"
       [disabled]="!editMode"
-      [placeholder]="t._('IDEA_COMMON.CONTACTS.NAME_HINT')"
-      [title]="t._('IDEA_COMMON.CONTACTS.NAME_HINT')"
+      [placeholder]="'IDEA_COMMON.CONTACTS.NAME_HINT' | translate"
+      [title]="'IDEA_COMMON.CONTACTS.NAME_HINT' | translate"
       [(ngModel)]="contacts.name"
     ></ion-input>
   </ion-item>
-  <ion-item [lines]="lines">
+  <ion-item [lines]="lines" [color]="color">
     <ion-label position="stacked">
       {{ 'IDEA_COMMON.CONTACTS.PHONE' | translate }}
     </ion-label>
     <ion-input
       autocomplete="new"
       [disabled]="!editMode"
-      [placeholder]="t._('IDEA_COMMON.CONTACTS.PHONE_HINT')"
-      [title]="t._('IDEA_COMMON.CONTACTS.PHONE_HINT')"
+      [placeholder]="'IDEA_COMMON.CONTACTS.PHONE_HINT' | translate"
+      [title]="'IDEA_COMMON.CONTACTS.PHONE_HINT' | translate"
       [(ngModel)]="contacts.phone"
     ></ion-input>
     <ion-button
@@ -28,21 +28,21 @@
       color="dark"
       class="marginTop"
       *ngIf="!editMode"
-      [title]="t._('IDEA_COMMON.CONTACTS.CALL')"
+      [title]="'IDEA_COMMON.CONTACTS.CALL' | translate"
       (click)="call()"
     >
       <ion-icon name="call" slot="icon-only"></ion-icon>
     </ion-button>
   </ion-item>
-  <ion-item [lines]="lines">
+  <ion-item [lines]="lines" [color]="color">
     <ion-label position="stacked">
       {{ 'IDEA_COMMON.CONTACTS.EMAIL' | translate }}
     </ion-label>
     <ion-input
       autocomplete="new"
       [disabled]="!editMode"
-      [placeholder]="t._('IDEA_COMMON.CONTACTS.EMAIL_HINT')"
-      [title]="t._('IDEA_COMMON.CONTACTS.EMAIL_HINT')"
+      [placeholder]="'IDEA_COMMON.CONTACTS.EMAIL_HINT' | translate"
+      [title]="'IDEA_COMMON.CONTACTS.EMAIL_HINT' | translate"
       [(ngModel)]="contacts.email"
     ></ion-input>
     <ion-button
@@ -51,7 +51,7 @@
       color="dark"
       class="marginTop"
       *ngIf="!editMode"
-      [title]="t._('IDEA_COMMON.CONTACTS.SEND_EMAIL')"
+      [title]="'IDEA_COMMON.CONTACTS.SEND_EMAIL' | translate"
       (click)="sendEmail()"
     >
       <ion-icon name="mail" slot="icon-only"></ion-icon>
