--- a/modules/auth/src/auth.scss
+++ b/modules/auth/src/auth.scss
@@ -1,5 +1,5 @@
 .flexBox {
-  background: var(--ion-color-white-shade);
+  background: var(--idea-auth-background-color, var(--ion-color-white-shade));
 }
 .authCard {
   min-width: 400px;
@@ -8,8 +8,8 @@
   margin-left: 10px;
   margin-right: 10px;
   padding: 20px;
-  background-color: var(--ion-color-white);
-  border: 1px solid var(--ion-color-light);
+  background-color: var(--idea-auth-card-background-color, var(--ion-color-white));
+  border: 1px solid var(--idea-auth-card-border-color, var(--ion-color-light));
   border-radius: 10px;
   box-shadow: none;
   text-align: center;
@@ -35,8 +35,8 @@
       border-left: 2px solid var(--ion-color-danger);
     }
     ion-item {
-      --ion-item-background: var(--ion-color-white);
-      --border-color: var(--ion-color-light);
+      --ion-item-background: var(--idea-auth-card-background-color, var(--ion-color-white));
+      --border-color: var(--idea-auth-card-border-color, var(--ion-color-light));
     }
     ion-icon {
       padding-top: 4px;
