--- a/modules/agenda/src/agenda.component.html
+++ b/modules/agenda/src/agenda.component.html
@@ -154,6 +154,43 @@
       </div>
     </div>
   </ng-template>
+  <ng-template
+    #headerTemplate
+    let-days="days"
+    let-locale="locale"
+    let-dayHeaderClicked="dayHeaderClicked"
+    let-eventDropped="eventDropped"
+    let-trackByWeekDayHeaderDate="trackByWeekDayHeaderDate"
+    let-dragEnter="dragEnter"
+  >
+    <div class="cal-day-headers" role="row">
+      <div
+        class="cal-header"
+        *ngFor="let day of days; trackBy: trackByWeekDayHeaderDate"
+        [class.cal-past]="day.isPast"
+        [class.cal-today]="day.isToday"
+        [class.cal-future]="day.isFuture"
+        [class.cal-weekend]="day.isWeekend"
+        [ngClass]="day.cssClass"
+        (mwlClick)="dayHeaderClicked.emit({ day: day, sourceEvent: $event })"
+        mwlDroppable
+        dragOverClass="cal-drag-over"
+        (drop)="
+          eventDropped.emit({
+            event: $event.dropData.event,
+            newStart: day.date
+          })
+        "
+        (dragEnter)="dragEnter.emit({ date: day.date })"
+        tabindex="0"
+        role="columnheader"
+      >
+        <b>{{ day.date | calendarDate : 'weekViewColumnHeader' : locale }}</b
+        ><br />
+        <span>{{ day.date | calendarDate : 'monthViewDayNumber' : locale }}</span>
+      </div>
+    </div>
+  </ng-template>
   <!-- VIEWS -->
   <div [ngSwitch]="view">
     <mwl-calendar-month-view
@@ -177,6 +214,7 @@
       [viewDate]="viewDate"
       [events]="events"
       [refresh]="refresh"
+      [headerTemplate]="headerTemplate"
       [locale]="locale"
       [excludeDays]="excludeDays"
       [weekStartsOn]="weekStartsOn"
