--- a/modules/common/src/customFields/customSection.component.html
+++ b/modules/common/src/customFields/customSection.component.html
@@ -77,10 +77,10 @@
       <ion-icon icon="help-circle-outline" slot="icon-only"></ion-icon>
     </ion-button>
     <ion-checkbox [disabled]="disabled" [(ngModel)]="fields[f]">
-      <ion-label class="ion-text-wrap">
+      <span class="ion-text-wrap">
         {{ sectionMeta.fields[f].name | label }}
         <ion-text class="obligatoryDot" *ngIf="sectionMeta.fields[f].obligatory && !disabled"></ion-text>
-      </ion-label>
+      </span>
     </ion-checkbox>
   </ion-item>
 </div>
